<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#9C27B0"
        android:gravity="left"
        android:padding="14dp"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp" >
    </com.google.android.gms.common.SignInButton>

    <Button
        android:id="@+id/button_start_game"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/button_start_game"
        android:enabled="false" />

    <Button
        android:id="@+id/button_leaderboards"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_start_game"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/button_leaderboards" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_leaderboards"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/settings" />

    <Button
        android:id="@+id/button_revoke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_leaderboards"
        android:layout_below="@+id/button_leaderboards"
        android:text="@string/revoke"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_invalidate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_revoke"
        android:layout_below="@+id/button_revoke"
        android:text="@string/invalidate"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBarSignIn"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

</RelativeLayout>