<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#9C27B0"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingEnd="32dp"
            android:paddingLeft="16dp"
            android:paddingRight="32dp"
            android:paddingStart="16dp"
            android:paddingTop="15dp"
            android:src="@drawable/ic_arrow_back_white_24dp" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- TextView
        android:layout_width="72dp"
        android:layout_height="2dp"
        android:background="@color/red"
        android:text="@string/volume_level" /-->

    <LinearLayout
        android:id="@+id/linearLayoutOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutTitle"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical" >

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >
        </com.google.android.gms.common.SignInButton>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/volume_level"
            android:textSize="17sp" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/difficulty"
            android:textSize="17sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" >

            <RadioButton
                android:id="@+id/radioEasy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/levelEasy" />

            <RadioButton
                android:id="@+id/radioMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/levelMedium" />

            <RadioButton
                android:id="@+id/radioHard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/levelHard" />
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>