<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/screen_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#9C27B0"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingEnd="32dp"
            android:paddingLeft="16dp"
            android:paddingRight="32dp"
            android:paddingStart="16dp"
            android:paddingTop="15dp"
            android:src="@drawable/ic_arrow_back_white_24dp" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:gravity="end"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/imageHeart1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_vertical|start"
                android:src="@drawable/ic_favorite_white_24dp"
                android:tint="@color/primary_light" />

            <ImageButton
                android:id="@+id/imageHeart2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_favorite_white_24dp"
                android:tint="@color/primary_light" />

            <ImageButton
                android:id="@+id/imageHeart3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_favorite_white_24dp"
                android:tint="@color/primary_light" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="18sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/scoreValue_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_init_val"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/scoreValue_separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_separator"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/scoreValue_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_init_val"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayoutAnswer1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/roundButtonAnswer1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textAnswer1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical|start"
                android:text="@string/answer1"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutAnswer2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/roundButtonAnswer2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:text=""
                android:textColor="@android:color/darker_gray"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textAnswer2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical|start"
                android:text="@string/answer2"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutAnswer3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/roundButtonAnswer3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:text=""
                android:textColor="@android:color/darker_gray"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textAnswer3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical|start"
                android:text="@string/answer3"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutAnswer4"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/roundButtonAnswer4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:text=""
                android:textColor="@android:color/darker_gray"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textAnswer4"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical|start"
                android:text="@string/answer4"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="#f0f0f0"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/reason"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/reason"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="end"
            android:orientation="horizontal" >

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/rate"
                android:textSize="15sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:src="@drawable/ic_thumb_up_white_24dp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:src="@drawable/ic_thumb_down_white_24dp" />
        </LinearLayout>

        <Button
            android:id="@+id/next_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_question" />
    </LinearLayout>

</LinearLayout>